--- a/templates/result.html
+++ b/templates/result.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <h1>Your Insurance Premium Result</h1>
-    <p>Your insurance premium is ${{final_result}} per year.</p>
+    <p>Your Expense for Insurance is ${{final_result}} .</p>
 
     <!-- Replace "XXX" with your actual insurance premium value -->
 
